United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7110152 assert(size_in_words <= (julong)max_jint) failed: no overflow
7110152 : assert(size_in_words <= (julong)max_jint) failed: no overflow

Details
Type:
Bug
Submit Date:
2011-11-09
Status:
Closed
Updated Date:
2012-03-22
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs23
Fixed Versions:
hs23

Related Reports
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
This happened in the hotspot-gc nightlies:

Internal Error (/tmp/jprt/P2/065704.brutisso/source/src/share/vm/oops/typeArrayOop.hpp:169), pid=31366, tid=1120483648
#  assert(size_in_words <= (julong)max_jint) failed: no overflow

Here is an hs_err file from one of the failures:
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2011-11-04/GC_Baseline/vm/linux-amd64/server/mixed/linux-amd64_vm_server_mixed_nsk.stress.testlist/ResultDir/jck122003/hs_err_pid31366.log

The top part of that failure: 

;; Using jvm: "/export/local/common/jdk/baseline/linux-amd64/jre/lib/amd64/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P2/065704.brutisso/source/src/share/vm/oops/typeArrayOop.hpp:169), pid=31366, tid=1120483648
#  assert(size_in_words <= (julong)max_jint) failed: no overflow
#
# JRE version: 7.0-b147
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b04-internal-201111040657.brutisso.hs-gc-g1-closure-i-fastdebug mixed mode linux-amd64 compressed oops)
# Core dump written. Default location: /export/local/56065.JDK7.NIGHTLY.VM_linux-amd64_vm_server_mixed_nsk.stress.testlist/results/ResultDir/jck122003/core or core.31366
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x00002aaab4018000):  JavaThread "Thread-19" [_thread_in_vm, id=31408, stack(0x0000000042b93000,0x0000000042c94000)]

Stack: [0x0000000042b93000,0x0000000042c94000],  sp=0x0000000042c91980,  free space=1018k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xc15a32]  VMError::report_and_die()+0x2f2;;  VMError::report_and_die()+0x2f2
V  [libjvm.so+0x5c0d74]  report_vm_error(char const*, int, char const*, char const*)+0x84;;  report_vm_error(char const*, int, char const*, char const*)+0x84
V  [libjvm.so+0xbd93dc]  typeArrayKlass::allocate_common(int, bool, Thread*)+0x2cc;;  typeArrayKlass::allocate_common(int, bool, Thread*)+0x2cc
V  [libjvm.so+0x75ff23]  InterpreterRuntime::newarray(JavaThread*, BasicType, int)+0xb3;;  InterpreterRuntime::newarray(JavaThread*, BasicType, int)+0xb3
j  javasoft.sqe.tests.lang.expr015.expr01502.expr01502.run([Ljava/lang/String;Ljava/io/PrintStream;)I+2
v  ~StubRoutines::call_stub
V  [libjvm.so+0x76dee1]  JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x6c1;;  JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x6c1
V  [libjvm.so+0x76aeab]  JavaCalls::call(JavaValue*, methodHandle, JavaCallArguments*, Thread*)+0x6b;;  JavaCalls::call(JavaValue*, methodHandle, JavaCallArguments*, Thread*)+0x6b
V  [libjvm.so+0xac768b]  Reflection::invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0x5db;;  Reflection::invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0x5db
V  [libjvm.so+0xac85b6]  Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x166;;  Reflection::invoke_method(oopDesc*, Handle, objArrayHandle, Thread*)+0x166
V  [libjvm.so+0x807c34]  JVM_InvokeMethod+0x1d4;;  JVM_InvokeMethod+0x1d4
j  sun.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0
j  sun.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+87
j  sun.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6
j  java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+57
j  nsk.stress.share.StressTest$TestThread.runTest(I)V+95
j  nsk.stress.share.StressTest$TestThread.run()V+27
v  ~StubRoutines::call_stub
V  [libjvm.so+0x76dee1]  JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x6c1;;  JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x6c1
V  [libjvm.so+0x76cb50]  JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x300;;  JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x300
V  [libjvm.so+0x76cda2]  JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0x52;;  JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0x52
V  [libjvm.so+0x7efda2]  thread_entry(JavaThread*, Thread*)+0xe2;;  _ZL12thread_entryP10JavaThreadP6Thread+0xe2
V  [libjvm.so+0xbbc5d9]  JavaThread::thread_main_inner()+0x1a9;;  JavaThread::thread_main_inner()+0x1a9
V  [libjvm.so+0xa1fc50]  java_start(Thread*)+0x100;;  _ZL10java_startP6Thread+0x100

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/aa4c21b00f7f
                                     
2012-03-22
EVALUATION

See main CR
                                     
2011-11-30
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/aa4c21b00f7f
                                     
2011-11-29
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/aa4c21b00f7f
                                     
2011-11-15
EVALUATION

Object size should be passed as size_t and not int.
                                     
2011-11-09



Hardware and Software, Engineered to Work Together