7110152: assert(size_in_words <= (julong)max_jint) failed: no overflow

Reduce what arrayOopDesc::max_array_length() returns to avoid int overflow

Reviewed-by: kvn, dholmes, tonyp